<resources>
    <string name="app_name">Segnum - Segurança Social</string>
    <string name="titulo">Segnum</string>
    <string name="login">Login</string>
    <string name="loginFacebook">Continuar com o Facebook</string>
    <string name="email">Email</string>
    <string name="meuemail">meuemail@provedor.com</string>
    <string name="notregisteredyet">Ainda não sou cadastrado</string>
    <string name="pass">Senha</string>
    <string name="mypass">Sua Senha</string>
    <string name="newuser">Novo Usuário</string>
    <string name="nome">Nome</string>
    <string name="nomecompleto">Seu nome completo</string>
    <string name="telefone">Telefone</string>
    <string name="telefonevalue">41 9 1234 5678</string>
    <string name="datanascimento">Data de Nascimento</string>
    <string name="registrar">Registrar-se</string>
    <string name="cancelar">Cancelar</string>


    <string-array name="arraytypes">
        <item>Roubo</item>
        <item>Indivíduo suspeito</item>
        <item>Drogas</item>
    </string-array>
    <string name="title_activity_main">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map_fragment">MapFragment</string>
</resources>
