<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andrevalvassori.segnum2020.Controller.LoginActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerVertical="false"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/ly_login_TopSegnum"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_media_ff"
            android:contentDescription="@string/titulo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-black"
            android:textSize="30sp"
            android:textColor="@android:color/holo_green_dark"
        />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_below="@+id/ly_login_TopSegnum"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/email"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@android:color/black"
        android:id="@+id/tv_login_email"
        />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_login_email"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="0dp"
        android:textAlignment="textStart"
        android:hint="@string/meuemail"
        android:text="master@segnum.com.br"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/meuemail"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_below="@+id/et_login_email"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/pass"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@android:color/black"
        android:id="@+id/tv_login_pass"/>

    <EditText
        android:id="@+id/et_login_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_login_pass"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="0dp"
        android:textAlignment="textStart"
        android:text="123"
        android:inputType="textPassword"
        android:hint="@string/mypass"
        android:autofillHints=""/>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/et_login_pass"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@android:color/holo_green_dark"
        android:onClick="btnLoginOnClick"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/btn_login_login"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#4267B2"
        android:onClick="btnFacebookOnClick"
        android:text="@string/loginFacebook"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_login_cadastro"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/btn_login_facebook"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:clickable="true"
        android:onClick="btnRegisterOnClick"
        android:text="@string/notregisteredyet"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

</RelativeLayout>