<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andrevalvassori.segnum2020.Controller.LoginActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="32dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomecompleto"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/greyColor"
            android:inputType="text"
            android:autofillHints="@string/meuemail"  />
        <EditText
            android:layout_marginTop="8dp"
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meuemail"
            android:textColorHint="@color/greyColor"
            android:textColor="@color/colorWhite"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/meuemail"  />
        <EditText
            android:layout_marginTop="8dp"
            android:id="@+id/et_register_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/greyColor"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:hint="@string/mypass"
            android:autofillHints=""/>
        <EditText
            android:layout_marginTop="8dp"
            android:id="@+id/et_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomecompleto"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/greyColor"
            android:inputType="text"
            android:autofillHints="@string/meuemail"  />

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/btn_register_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:onClick="btnLoginOnClick"
            android:textColor="@color/colorWhite"
            android:text="@string/registrar"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/roundedbuttonoutbox"
        android:id="@+id/btn_register_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="btnEnterWithoutLogin"
        android:textColor="@color/colorWhite"
        android:text="Cancelar"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>